# lwow

./: .gitignore  .mxproject  AUTHORS  CHANGELOG.md  CMakeLists.txt  README.md  f4_usart_onewire.ioc  library.json  mx.scratch
Inc/: main.h  onewire.h  stm32f4xx_it.h  usart.h
MDK-ARM/: f4_usart_onewire.uvguix.tilen majerle  f4_usart_onewire.uvoptx  f4_usart_onewire.uvprojx
Src/: main.c  onewire.c  usart.c
dev/: lwow_dev.vcxproj  lwow_dev.vcxproj.filters  lwow_opts.h  main.c
dev/MDK-ARM/: f4_usart_onewire.uvguix.tilen majerle  f4_usart_onewire.uvoptx  f4_usart_onewire.uvprojx  onewire_dev.uvoptx  onewire_dev.uvprojx
dev/MDK-ARM/RTE/_OneWire_DEV/: RTE_Components.h
dev/MDK-ARM/RTE/_f4_usart_onewire/: RTE_Components.h
dev/VisualStudio/: VisualStudio.sln  VisualStudio.vcxproj  VisualStudio.vcxproj.filters  lwow_dev.sln  lwow_dev.vcxproj  lwow_dev.vcxproj.filters  lwow_opts.h  main.c  onewire_uart.sln  onewire_uart.vcxproj  onewire_uart.vcxproj.filters  onewire_uart_dev.sln  onewire_uart_dev.vcxproj  onewire_uart_dev.vcxproj.filters  ow_config.h  ow_opts.h  stdafx.cpp
dev/inc/: ow_config.h
dev/src/: main.c  stm32f4xx_it.c  stm32l4xx_it.c
docs/: conf.py  doxyfile.doxy  index.rst
docs/api-reference/: config.rst  index.rst  lwow.rst  opt.rst  ow.rst  ow_config.rst  ow_ll.rst  ow_sys.rst
docs/api-reference/devices/: ds18x20.rst  index.rst
docs/api-reference/port/: index.rst  ll.rst  sys.rst
docs/examples/: _ow_config.h  _ow_config_template.h  _ow_sys.c  index.rst  ow_search.c
docs/examples_src/: ow_search.c
docs/get-started/: index.rst
docs/src/: 1w_bit_byte.xml  1w_pp2od.xml  _application_note.h  _mainpage.h  _ow_config.h  _ow_devices.h  _ow_ll.h  _ow_sys.h
docs/static/images/: logo  logo.drawio
docs/user-manual/: how-it-works.rst  hw-connection.rst  hw_connection.rst  index.rst  porting-guide.rst  thread-safety.rst  uart-timing.rst  uart_timing.rst
examples/stm32/ow_ds18b20_multi_rtos_stm32f429zi_nucleo/: .cproject  .project  CMakeLists.txt  OW_STM32F429ZI_Nucleo_DS18B20_Multi_RTOS Debug.launch  OW_STM32F429ZI_Nucleo_DS18B20_Multi_RTOS.ioc  STM32F429ZITX_FLASH.ld  STM32F429ZITX_RAM.ld
examples/stm32/ow_ds18b20_multi_rtos_stm32f429zi_nucleo/Core/Inc/: FreeRTOSConfig.h  lwow_opts.h  main.h  stm32f4xx_it.h
examples/stm32/ow_ds18b20_multi_rtos_stm32f429zi_nucleo/Core/Src/: main.c  stm32f4xx_hal_msp.c  stm32f4xx_hal_timebase_tim.c  stm32f4xx_it.c
examples/stm32/ow_ds18b20_rtos_stm32f401re_nucleo/: CMakeLists.txt  CMakePresets.json
examples/stm32/ow_ds18b20_rtos_stm32f401re_nucleo/STM32CubeIDE/: .cproject  .project  STM32F401RETX_FLASH.ld  lwow_stm32f401re_nucleo_ds18b20_rtos Debug.launch
examples/stm32/ow_ds18b20_rtos_stm32f401re_nucleo/inc/: lwow_opts.h  main.h
examples/stm32/ow_ds18b20_rtos_stm32f401re_nucleo/src/: main.c
examples/stm32/ow_ds18b20_rtos_stm32f429zi_nucleo/: CMakeLists.txt
examples/stm32/ow_ds18b20_rtos_stm32f429zi_nucleo/STM32CubeIDE/: .cproject  .project
examples/stm32/ow_ds18b20_rtos_stm32f429zi_nucleo/inc/: lwow_opts.h  main.h  ow_config.h  ow_opts.h
examples/stm32/ow_ds18b20_rtos_stm32f429zi_nucleo/src/: main.c
examples/stm32/ow_ds18b20_rtos_stm32l496g_discovery/: CMakeLists.txt
examples/stm32/ow_ds18b20_rtos_stm32l496g_discovery/STM32CubeIDE/: .cproject  .project
examples/stm32/ow_ds18b20_rtos_stm32l496g_discovery/inc/: lwow_opts.h  main.h  ow_config.h
examples/stm32/ow_ds18b20_rtos_stm32l496g_discovery/src/: main.c
examples/stm32/ow_ds18b20_stm32l496g_discovery/: CMakeLists.txt
examples/stm32/ow_ds18b20_stm32l496g_discovery/STM32CubeIDE/: .cproject  .project  OW_STM32L496G_Discovery_DS18B20 Debug.launch
examples/stm32/ow_ds18b20_stm32l496g_discovery/inc/: lwow_opts.h  main.h  ow_config.h  ow_opts.h
examples/stm32/ow_ds18b20_stm32l496g_discovery/src/: main.c
examples/stm32l496g-discovery/ow_ds18b20_RTOS/TrueSTUDIO/: .cproject  .project  STM32L496G_Discovery_DS18B20_RTOS.elf.launch
examples/stm32l496g-discovery/ow_ds18b20_RTOS/inc/: ow_config.h
examples/stm32l496g-discovery/ow_ds18b20_RTOS/src/: main.c
lwow/: CMakeLists.txt  library.cmake
lwow/src/devices/: lwow_device_ds18x20.c
lwow/src/include/lwow/: lwow.h  lwow_opt.h  lwow_opts_template.h
lwow/src/include/lwow/devices/: lwow_device_ds18x20.h
lwow/src/include/system/: lwow_sys.h
lwow/src/lwow/: lwow.c
lwow/src/system/: lwow_ll_stm32.c  lwow_ll_stm32_hal.c  lwow_ll_stm32_single_gpio_driver.c  lwow_ll_stm32f401re_nucleo.c  lwow_ll_stm32f429zi_nucleo.c  lwow_ll_stm32l0xx.c  lwow_ll_stm32l496g_discovery.c  lwow_ll_template.c  lwow_ll_win32.c  lwow_sys_cmsis_os.c  lwow_sys_template.c  lwow_sys_threadx.c  lwow_sys_win32.c  ow_ll_stm32.c  ow_ll_stm32_hal.c
onewire_uart/src/devices/: ow_device_ds18x20.c  ow_device_ds2430.c
onewire_uart/src/include/ow/: ow.h  ow_config_default.h  ow_config_template.h  ow_opt.h  ow_opts_template.h
onewire_uart/src/include/ow/devices/: ow_device_ds18x20.h  ow_device_ds2430.h
onewire_uart/src/include/system/: ow_ll.h  ow_sys.h
onewire_uart/src/ow/: ow.c
onewire_uart/src/system/: ow_hal_stm32g070RB.c  ow_ll_stm32.c  ow_ll_stm32_cubemx_hal_dma.c  ow_ll_stm32_hal.c  ow_ll_stm32f429zi_nucleo.c  ow_ll_stm32l0.c  ow_ll_stm32l0xx.c  ow_ll_stm32l496g_discovery.c  ow_ll_template.c  ow_ll_win32.c  ow_sys_cmsis_os.c  ow_sys_template.c  ow_sys_win32.c
snippets/: CMakeLists.txt  scan_devices.c
snippets/include/: scan_devices.h
src/devices/: ow_device_ds18x20.c
src/include/ow/: ow.h  ow_config_default.h  ow_config_template.h
src/include/ow/devices/: ow_device_ds18x20.h
src/include/system/: ow_ll.h  ow_sys.h
src/ow/: ow.c
src/system/: ow_ll_gpio.c  ow_ll_stm32.c  ow_ll_stm32f429zi_nucleo.c  ow_ll_stm32l4.c  ow_ll_stm32l496g_discovery.c  ow_ll_stm32l4xx.c  ow_ll_template.c  ow_ll_win32.c  ow_sys_cmsis_os.c  ow_sys_template.c  ow_sys_win32.c
